# gmo-cleansing-system

./: .gitignore  README.md  cleansing_log.txt  key.py  pyproject.toml  run.py
3_Config/: media_mapping.json  product_mapping.json  product_mapping_CE.json  product_mapping_MX.json
src/: config.py  converter.py  pipeline.py  reporting.py  updater.py  utils.py
